# tauri-leptos-app

./: Cargo.toml  styles.css
src/: app.rs  helper.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
